Additional validation for API session keys (#2294)